Change return type of ApiReferenceFileClient.download to String